--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://i.blogs.es/53fd11/rustician-rust-lenguaje/840_560.png" />
+    <link rel="icon" href="%PUBLIC_URL%/icono.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>SO1_Grupo20</title>
+    <title>DB1_Grupo 20</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
